--- a/sections/oupc/SubSection2/template.html
+++ b/sections/oupc/SubSection2/template.html
@@ -13,19 +13,60 @@
           md="4"
           xs="12"
           class="pa-md-3 gonuxt-tile"
+          v-for="tile in tiles1Col"
+          :key="tile.title"
+        >
+          <PhotoCard
+            :imgSrc="tile.imgSrc"
+            :title="tile.title"
+            :titleSize="tile.titleSize"
+            :txtPosition="tile.txtPosition"
+            :link="tile.link"
+            :txtBody="tile.txtBody"
+            :locate="tile.locate"
+          />
+        </v-col>
+      </v-row>
+      <v-row class="d-flex justify-left align-center gont-tile-layout-template">
+        <v-col
+          cols="4"
+          sm="4"
+          md="4"
+          xs="12"
+          class="pa-md-3 gonuxt-tile"
           v-for="tile in tiles2Col"
           :key="tile.title"
         >
-          <nuxt-link to="/" class="text-decoration-none">
-            <PhotoCard
-              :imgSrc="tile.imgSrc"
-              :title="tile.title"
-              :titleSize="tile.titleSize"
-              :txtPosition="tile.txtPosition"
-              :link="tile.link"
-              :txtBody="tile.txtBody"
-            />
-          </nuxt-link>
+          <PhotoCard
+            :imgSrc="tile.imgSrc"
+            :title="tile.title"
+            :titleSize="tile.titleSize"
+            :txtPosition="tile.txtPosition"
+            :link="tile.link"
+            :txtBody="tile.txtBody"
+            :locate="tile.locate"
+          />
+        </v-col>
+      </v-row>
+      <v-row class="d-flex justify-left align-center gont-tile-layout-template">
+        <v-col
+          cols="4"
+          sm="4"
+          md="4"
+          xs="12"
+          class="pa-md-3 gonuxt-tile"
+          v-for="tile in tiles3Col"
+          :key="tile.title"
+        >
+          <PhotoCard
+            :imgSrc="tile.imgSrc"
+            :title="tile.title"
+            :titleSize="tile.titleSize"
+            :txtPosition="tile.txtPosition"
+            :link="tile.link"
+            :txtBody="tile.txtBody"
+            :locate="tile.locate"
+          />
         </v-col>
       </v-row>
     </section>
