--- a/sections/oupc/SubSection4/template.html
+++ b/sections/oupc/SubSection4/template.html
@@ -1,8 +1,8 @@
 <section class="gnt-sec-2">
-  <h2 class="font-weight-bold">新歓情報カレンダー</h2>
+  <h2 class="font-weight-bold d-block">年間スケジュール</h2>
   <v-container fluid>
     <v-row class="d-flex justify-center align-stretch">
-      <v-col cols="12" sm="5">
+      <v-col cols="12">
         <v-img :src="imgSrc" />
       </v-col>
     </v-row>
