--- a/sections/oupc/SubSection8/template.html
+++ b/sections/oupc/SubSection8/template.html
@@ -1,19 +1,40 @@
 <section class="gnt-sec-2">
   <v-container fluid>
-    <u><h1 class="pb-8 text-center">ACCESS</h1></u>
-    <v-row >
-      <v-col cols="12" sm="6">
-        <iframe :src="mapURL"  width="100%" :height="mapHeight" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <h2 class="font-weight-bold pb-8 text-left">アクセス</h2>
+    <v-row class="align-center">
+      <v-col cols="12" xs="12" sm="12" md="12" lg="6" xl="6">
+        <iframe
+          :src="mapURL"
+          width="100%"
+          :height="mapHeight"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+        ></iframe>
       </v-col>
-      <v-col cols="12" sm="6" class="pt-8 pl-8">
-        <h2>交通アクセス</h2>
-        <p>阪急電車千里線「北千里駅」下車。東へ徒歩 約15分</p>
-        <h2>活動日</h2>
-        <p>毎週 月・水・金</p>
-        <h2>連絡先</h2>
-        <p>mail: 〇〇〇〇@gmail.com</p>
-        <p>tel: 012-3456-6789</p>
+      <v-col
+        cols="12"
+        xs="12"
+        sm="12"
+        md="12"
+        lg="6"
+        xl="6"
+        class="text-center align-center font-weight-bold"
+      >
+        <p>
+          活動場所…豊中キャンパス（新体育館下・明道館）
+          <br />
+          連絡先…oucp1962@gmail.com
+          <br />
+          もしくは新歓SNSのDM
+          <br />
+          Twitter(@oucp61_shinkan)
+          <br />
+          Instagram(oucp61_shinkan)
+          <br />
+          まで!
+        </p>
       </v-col>
     </v-row>
-    </v-container>
+  </v-container>
 </section>
