#8 年間スケジュールの完成

--- a/sections/oupc/SubSection4/template.html
+++ b/sections/oupc/SubSection4/template.html
@@ -1,9 +1,17 @@
 <section class="gnt-sec-2">
-  <h2 class="font-weight-bold d-block">年間スケジュール</h2>
   <v-container fluid>
-    <v-row class="d-flex justify-center align-stretch">
+    <v-row class="d-flex align-stretch">
+      <v-col cols="12" lg="4" xl="4">
+        <h2 class="font-weight-bold d-block">年間スケジュール</h2>
+      </v-col>
+      <v-col cols="12" lg="6" xl="6">
+        <h2 class="font-weight-bold d-block">普段の活動日：火・木・土</h2>
+      </v-col>
+    </v-row>
+
+    <v-row class="d-flex align-center" justify="center">
       <v-col cols="12">
-        <v-img :src="imgSrc" />
+        <v-img :src="imgSrc" max-width="60rem" /></v-img>
       </v-col>
     </v-row>
   </v-container>
