add date in header of event card

--- a/sections/oupc/SubSection2/template.html
+++ b/sections/oupc/SubSection2/template.html
@@ -17,7 +17,7 @@
                     class="rounded-lg mr-2 px-3 py-1 black--text"
                     color="primary lighten-3"
                   >
-                    4/1
+                    {{item.day}}
                   </v-sheet>
                   <span class="mx-2"> {{ item.title }} </span>
                 </v-card-title>
