--- a/sections/oupc/SubSection6/template.html
+++ b/sections/oupc/SubSection6/template.html
@@ -1,22 +1,56 @@
 <section class="gnt-sec-2">
-  <h2 class="font-weight-bold d-block">新入生へのメッセージ</h2>
   <v-container fluid>
-    <v-row class="d-flex gont-tile-layout-template">
-      <v-col
-        cols="12"
-        md="6"
-        xl="6"
-        lg="6"
-        class="pa-md-5"
-        v-for="card in Cards2Col"
-        :key="card.title"
-      >
-        <MessageCard
-          :imgSrc="card.imgSrc"
-          :title="card.title"
-          :detail="card.detail"
-          :name="card.name"
-      /></v-col>
+    <div class="mb-8">
+      <h2 class="font-weight-bold mb-3">新入生へのメッセージ</h2>
+    </div>
+    <v-row>
+      <v-col v-for="(item, i) in items" :key="i" cols="12" sm="6">
+        <v-dialog v-model="dialog" width="500">
+          <template v-slot:activator="{ on, attrs }">
+            <v-hover v-slot="{ hover }">
+              <v-card
+                :color="hover ? item.color : 'white'"
+                elevation="4"
+                v-bind="attrs"
+                v-on="on"
+                @click="openModal(item)"
+              >
+                <v-row justify="space-between" dense>
+                  <v-col cols="4">
+                    <div class="ma-3 pl-1">
+                      <v-img
+                        :src="item.src"
+                        aspect-ratio="1"
+                        class="rounded-sm"
+                      ></v-img>
+                    </div>
+                  </v-col>
+
+                  <v-col cols="8" class="d-flex align-center flex-column">
+                    <v-card-title
+                      v-text="item.title"
+                      class="card-title mt-auto font-weight-bold text-md-h5 text-subtitle-2"
+                    ></v-card-title>
+
+                    <v-card-subtitle
+                      v-text="item.name"
+                      class="mt-auto font-weight-bold text-md-subtitle-2 text-caption"
+                    ></v-card-subtitle>
+                  </v-col>
+                </v-row>
+              </v-card>
+            </v-hover>
+          </template>
+
+          <v-card>
+            <v-card-title class="text-h5 grey lighten-2">
+              {{ modalTitle }}
+            </v-card-title>
+
+            <v-card-text class="pt-3"> {{ modalText }} </v-card-text>
+          </v-card>
+        </v-dialog>
+      </v-col>
     </v-row>
   </v-container>
 </section>
