--- a/sections/oupc/SubSection4/template.html
+++ b/sections/oupc/SubSection4/template.html
@@ -1,5 +1,5 @@
 <section class="gnt-sec-2">
-  <v-container fluid>
+  <v-container >
     <v-row class="d-flex align-stretch">
       <v-col cols="12" lg="4" xl="4">
         <h2 class="font-weight-bold d-block">年間スケジュール</h2>
@@ -9,9 +9,9 @@
       </v-col>
     </v-row>
 
-    <v-row class="d-flex align-center" justify="center">
-      <v-col cols="12">
-        <v-img :src="imgSrc" max-width="60rem" /></v-img>
+    <v-row class="d-flex align-center justify-center" >
+      <v-col cols="12" md="10">
+        <v-img :src="imgSrc" class="d-block"/></v-img>
       </v-col>
     </v-row>
   </v-container>
