--- a/sections/oupc/SubSection6/template.html
+++ b/sections/oupc/SubSection6/template.html
@@ -1,5 +1,5 @@
-<section class="gnt-sec-2">
-  <v-container fluid>
+<section class="gnt-sec-2 accent lighten-3 py-6">
+  <v-container>
     <div class="mb-8">
       <h2 class="font-weight-bold mb-3">新入生へのメッセージ</h2>
     </div>
@@ -29,7 +29,7 @@
                   <v-col cols="8" class="d-flex align-center flex-column">
                     <v-card-title
                       v-text="item.title"
-                      class="card-title mt-auto font-weight-bold text-md-h5 text-subtitle-2"
+                      class="card-title mt-auto font-weight-bold text-md-h6 text-subtitle-2"
                     ></v-card-title>
 
                     <v-card-subtitle
@@ -43,7 +43,7 @@
           </template>
 
           <v-card>
-            <v-card-title class="text-h5 grey lighten-2">
+            <v-card-title class="text-h5 accent lighten-2">
               {{ modalTitle }}
             </v-card-title>
 
