--- a/sections/oupc/SubSection8/template.html
+++ b/sections/oupc/SubSection8/template.html
@@ -1,5 +1,5 @@
 <section class="gnt-sec-2">
-  <v-container fluid>
+  <v-container>
     <h2 class="font-weight-bold pb-8 text-left">アクセス</h2>
     <v-row class="align-center">
       <v-col cols="12" xs="12" sm="12" md="12" lg="6" xl="6">
