--- a/sections/oupc/SubSection2/template.html
+++ b/sections/oupc/SubSection2/template.html
@@ -1,6 +1,10 @@
 <section class="gnt-sec-2">
   <v-container>
-    <h2 class="font-weight-bold">新歓イベント</h2>
+    <h3
+      class="font-weight-bold pb-4 primary--text text--darken-1 text-center text-h3"
+    >
+      新歓イベント
+    </h3>
     <v-sheet>
       <v-slide-group multiple center-active>
         <v-slide-item v-for="item in items" :key="item.title">
