--- a/sections/oupc/SubSection4/template.html
+++ b/sections/oupc/SubSection4/template.html
@@ -1,13 +1,10 @@
 <section class="gnt-sec-2">
   <v-container >
-    <v-row class="d-flex align-stretch">
-      <v-col cols="12" lg="4" xl="4">
-        <h2 class="font-weight-bold d-block">年間スケジュール</h2>
-      </v-col>
-      <v-col cols="12" lg="6" xl="6">
-        <h2 class="font-weight-bold d-block">普段の活動日：火・木・土</h2>
-      </v-col>
-    </v-row>
+    <h3 class="font-weight-bold d-block pb-4 primary--text text--darken-1 text-center text-h3">年間スケジュール</h3>
+  
+    <h3 class="font-weight-bold d-block  primary--text text--darken-1 text-center text-h4">活動日 </h3>
+    <h3 class="font-weight-bold d-block  primary--text text--darken-1 text-center text-h4">火・木 18:00〜20:00 </h3>
+    <h3 class="font-weight-bold d-block  primary--text text--darken-1 text-center text-h4">&emsp;&emsp;土 10:00～13:00</h3>
 
     <v-row class="d-flex align-center justify-center" >
       <v-col cols="12" md="10">
