--- a/sections/oupc/SubSection6/template.html
+++ b/sections/oupc/SubSection6/template.html
@@ -1,10 +1,14 @@
-<section class="gnt-sec-2 accent lighten-3 py-6">
+<section class="gnt-sec-2 py-6">
   <v-container>
     <div class="mb-8">
-      <h2 class="font-weight-bold mb-3">新入生へのメッセージ</h2>
+      <h3
+        class="font-weight-bold mb-3 pb-4 primary--text text--darken-1 text-center text-h3"
+      >
+        新入生へのメッセージ
+      </h3>
     </div>
     <v-row>
-      <v-col v-for="(item, i) in items" :key="i" cols="12" sm="6">
+      <v-col v-for="(item, i) in items" :key="i" cols="12" sm="12" md="6">
         <v-dialog v-model="dialog" width="500">
           <template v-slot:activator="{ on, attrs }">
             <v-hover v-slot="{ hover }">
