--- a/sections/oupc/SubSection4/template.html
+++ b/sections/oupc/SubSection4/template.html
@@ -1,6 +1,6 @@
 <section class="gnt-sec-2">
   <v-container >
-    <h3 class="font-weight-bold d-block pb-4 primary--text text--darken-1 text-center text-h3">年間スケジュール</h3>
+    <h3 class="font-weight-bold d-block pb-4 primary--text text--darken-1 text-center text-h3">年間<br class="br-disp" />スケジュール</h3>
   
     <h3 class="font-weight-bold d-block  primary--text text--darken-1 text-center text-h4">活動日 </h3>
     <h3 class="font-weight-bold d-block  primary--text text--darken-1 text-center text-h4">火・木 18:00〜20:00 </h3>
