--- a/sections/oupc/SubSection7/template.html
+++ b/sections/oupc/SubSection7/template.html
@@ -7,7 +7,7 @@
     </h3>
 
     <v-row class="d-flex justify-left align-stretch">
-      <v-col cols="4">
+      <v-col cols="12" md="4">
         <v-sheet class="pa-3 rounded-l" style="height: 100%">
           <v-row>
             <v-col cols="12">
@@ -28,7 +28,7 @@
           </v-row>
         </v-sheet>
       </v-col>
-      <v-col cols="8">
+      <v-col cols="12" md="8">
         <v-row
           class="d-flex justify-left flex-nowrap overflow-auto align-center"
         >
@@ -60,7 +60,7 @@
     </v-row>
 
     <v-row class="d-flex justify-left align-stretch">
-      <v-col cols="4">
+      <v-col cols="12" md="4">
         <v-sheet class="pa-3 rounded-l" style="height: 100%">
           <v-row>
             <v-col cols="12">
@@ -81,7 +81,7 @@
           </v-row>
         </v-sheet>
       </v-col>
-      <v-col cols="8">
+      <v-col cols="12" md="8">
         <v-row
           class="d-flex justify-left flex-nowrap overflow-auto align-center"
         >
@@ -113,7 +113,7 @@
     </v-row>
 
     <v-row class="d-flex justify-left align-stretch">
-      <v-col cols="4">
+      <v-col cols="12" md="4">
         <v-sheet class="pa-3 rounded-l" style="height: 100%">
           <v-row>
             <v-col cols="12">
@@ -132,7 +132,7 @@
           </v-row>
         </v-sheet>
       </v-col>
-      <v-col cols="8">
+      <v-col cols="12" md="8">
         <v-row
           class="d-flex justify-left flex-nowrap overflow-auto align-center"
         >
