create message section

--- a/sections/oupc/SubSection1/template.html
+++ b/sections/oupc/SubSection1/template.html
@@ -10,9 +10,7 @@
     </v-row>
 
     <v-sheet class="white pa-6 rounded-xl key-visual-text key-visual-text">
-      <h1 class="d-block primary--text text--darken-2">
-        大阪大学を<br />盛り上げる
-      </h1>
+      <h1 class="d-block primary--text">大阪大学を<br />盛り上げる</h1>
       <p>
         をモットーに、体育会の運動部さんの応援や、
         イベント等において演舞を披露させていただいています。
