--- a/sections/oupc/SubSection7/template.html
+++ b/sections/oupc/SubSection7/template.html
@@ -1,8 +1,6 @@
 <section class="gnt-sec-2">
   <v-container>
-    <h3
-      class="font-weight-bold pb-4 d-block primary--text text--darken-1 text-center text-h3"
-    >
+    <h3 class="font-weight-bold pb-4 d-block primary--text text-center text-h3">
       団員紹介
     </h3>
 
