--- a/sections/oupc/SubSection3/template.html
+++ b/sections/oupc/SubSection3/template.html
@@ -1,9 +1,24 @@
-<section class="gnt-sec-2">
-  <h2 class="font-weight-bold">新歓情報カレンダー</h2>
-  <v-container fluid>
-    <v-row class="d-flex justify-center align-stretch">
-      <v-col cols="12" sm="5">
-        <v-img :src="imgSrc" />
+<section class="gnt-sec-3">
+  <v-container class="complement border-1">
+    <h3></h3>
+    <v-row class="d-flex justify-center">
+      <v-col cols="10" sm="8" md="7" lg="6">
+        <v-row class="d-flex justify-center">
+          <v-col cols="12" class="d-block text-center gnt-text-center-b">
+            <p class="font-weight-bold text-h6">
+              ご入学おめでとうございます。<br />
+              誰かを応援したい人<br />
+              たくさんの人と交流したい人<br />
+              何かに全力になりたい人<br class="br-disp" />&emsp;...etc
+            </p>
+            <p class="font-weight-bold text-h5">
+              最後の学生生活を<br class="br-disp" />最高の学生生活に<br
+                class="br-disp"
+              />したいなら<br />
+              大阪大学応援団へ！
+            </p>
+          </v-col>
+        </v-row>
       </v-col>
     </v-row>
   </v-container>
