--- a/sections/oupc/SubSection5/template.html
+++ b/sections/oupc/SubSection5/template.html
@@ -1,8 +1,6 @@
 <section class="gnt-sec-2">
   <v-container>
-    <h3
-      class="font-weight-bold d-block pb-4 primary--text text--darken-1 text-center text-h3"
-    >
+    <h3 class="font-weight-bold d-block pb-4 primary--text text-center text-h3">
       Q&A
     </h3>
     <v-row class="d-flex justify-left align-center">
