--- a/sections/oupc/SubSection6/template.html
+++ b/sections/oupc/SubSection6/template.html
@@ -1,9 +1,7 @@
 <section class="gnt-sec-2 py-6">
   <v-container>
     <div class="mb-8">
-      <h3
-        class="font-weight-bold mb-3 pb-4 primary--text text--darken-1 text-center text-h3"
-      >
+      <h3 class="font-weight-bold mb-3 pb-4 primary--text text-center text-h3">
         新入生へ<br class="br-disp" />メッセージ
       </h3>
     </div>
