--- a/sections/oupc/SubSection8/template.html
+++ b/sections/oupc/SubSection8/template.html
@@ -1,8 +1,6 @@
 <section class="gnt-sec-2">
   <v-container>
-    <h3
-      class="font-weight-bold pb-8 primary--text text--darken-1 text-center text-h3"
-    >
+    <h3 class="font-weight-bold pb-8 primary--text text-center text-h3">
       アクセス
     </h3>
     <v-row class="align-center">
