add background color to access section

--- a/sections/oupc/AccessSection/template.html
+++ b/sections/oupc/AccessSection/template.html
@@ -1,4 +1,4 @@
-<section class="gnt-sec-2">
+<section class="gnt-sec-2 grey lighten-3 mb-n15">
   <v-container>
     <h3 class="font-weight-bold pb-8 primary--text text-center text-h3">
       アクセス
