change color design

--- a/sections/oupc/MemberSection/template.html
+++ b/sections/oupc/MemberSection/template.html
@@ -14,11 +14,11 @@
               </p>
             </v-col>
           </v-row>
-          <v-row class="d-flex align-center">
+          <v-row class="d-flex align-stretch">
             <v-col cols="12" lg="12" xl="12">
-              <v-img height="12rem" :src="imgSrc1" />
+              <v-img class="img-box" aspect-ratio="1.5" :src="imgSrc1" />
             </v-col>
-            <v-col cols="12" lg="12" xl="12" class="font-weight-bold">
+            <v-col cols="12" class="pl-10 pr-10 font-weight-bold text-center">
               <p>
                 拍手・声援を届けるバック、鼓手、旗手、そして独特な振りで応援を指揮するチーフに分かれ、応援を文字通りリードする部です。
               </p>
@@ -69,9 +69,14 @@
           </v-row>
           <v-row class="d-flex align-center">
             <v-col cols="12" lg="12" xl="12">
-              <v-img height="12rem" :src="imgSrc2" />
+              <v-img class="img-box" aspect-ratio="1" :src="imgSrc2" />
             </v-col>
-            <v-col cols="12" lg="12" xl="12" class="font-weight-bold">
+            <v-col
+              cols="12"
+              lg="12"
+              xl="12"
+              class="pl-10 pr-10 font-weight-bold text-center"
+            >
               <p>
                 笑顔とダンスで応援に華を添え、応援のエネルギーを全身で表現できる部です！
               </p>
@@ -121,10 +126,10 @@
             </v-col>
           </v-row>
           <v-row class="d-flex align-center">
-            <v-col cols="12">
-              <v-img height="12rem" :src="imgSrc3" />
+            <v-col cols="12" class="">
+              <v-img class="img-box" aspect-ratio="1" :src="imgSrc3" />
             </v-col>
-            <v-col cols="12" class="font-weight-bold">
+            <v-col cols="12" class="pl-10 pr-10 font-weight-bold text-center">
               <p>楽器を用いた迫力のある演奏で、応援を盛り上げる部です！</p>
             </v-col>
           </v-row>
