--- a/sections/oupc/TopSection/template.html
+++ b/sections/oupc/TopSection/template.html
@@ -9,11 +9,15 @@
       </v-col>
     </v-row>
 
-    <v-sheet class="white pa-6 rounded-xl key-visual-text key-visual-text">
+    <v-sheet class="white pa-6 rounded-xl key-visual-text">
       <h1 class="d-block primary--text">大阪大学を<br />盛り上げる</h1>
       <p>
-        をモットーに、体育会の運動部さんの応援や、
-        イベント等において演舞を披露させていただいています。
+        をモットーに体育会の運動部の応援や<br />学校内外のイベント等において<br />演舞を
+        披露させていただいています。<br />
+        リーダー部、吹奏部、チアリーダー部<br />の3部、16名で活動しています。
+      </p>
+      <p class="d-block font-weight-bold tiadic--text text--lighten-3 text-h4">
+        初心者大歓迎！!
       </p>
     </v-sheet>
   </v-container>
@@ -27,26 +31,19 @@
       </v-col>
       <v-col cols="12" class="text-center px-6 key-visual-text">
         <v-sheet class="white pa-3 rounded-xl">
-          <h1 class="d-block primary--text text--darken-2">
-            大阪大学を<br />盛り上げる
-          </h1>
-          <p>
-            をモットーに、体育会の運動部さんの応援や、
-            イベント等において演舞を披露させていただいています。
+          <h2 class="d-block primary--text">大阪大学を<br />盛り上げる</h2>
+          <p class="d-block">
+            をモットーに<br />体育会の運動部の応援や<br />
+            学内外のイベント等において<br />演舞を披露しています。<br />
+            リーダー部<br />吹奏部<br />チアリーダー部<br />の3部・16名で活動しています。
+          </p>
+          <p
+            class="d-block font-weight-bold tiadic--text text--lighten-3 text-h5"
+          >
+            初心者大歓迎！!
           </p>
         </v-sheet>
       </v-col>
     </v-row>
-  </v-container>
-
-  <v-container class="py-6">
-    <v-col cols="12" class="">
-      <p>
-        リーダー部、吹奏部、チアリーダー部の3部、計16名で活動しています。<br />
-        ほぼ全員が初心者で、学生時代にしかできないことをしたい、他大学で友達を作りたい..そんな人にオススメ⭐️
-        <br />
-        誰かを応援したいという気持ちさえあれば、誰でも大歓迎です！！
-      </p>
-    </v-col>
   </v-container>
 </section>
