change color and layout

--- a/sections/oupc/EventSection/template.html
+++ b/sections/oupc/EventSection/template.html
@@ -1,10 +1,10 @@
-<section class="gnt-sec-2">
+<section class="pb-4 grey lighten-4">
   <v-container>
     <h3 class="font-weight-bold pb-4 primary--text text-center text-h3">
       新歓イベント
     </h3>
 
-    <v-sheet>
+    <v-sheet class="grey lighten-4">
       <v-slide-group
         mobile-breakpoint="600"
         light
@@ -61,7 +61,7 @@
     </v-sheet>
     <v-row justify="center">
       <v-col cols="2">
-        <v-icon class="hidden-sm-and-up" large>
+        <v-icon class="hidden-sm-and-up" color="grey" large>
           mdi-gesture-swipe-horizontal
         </v-icon>
       </v-col>
