--- a/sections/oupc/MemberSection/template.html
+++ b/sections/oupc/MemberSection/template.html
@@ -1,12 +1,12 @@
-<section class="gnt-sec-2">
+<section class="pb-4 grey lighten-3">
   <v-container>
     <h3 class="font-weight-bold pb-4 d-block primary--text text-center text-h3">
       団員紹介
     </h3>
 
     <v-row class="d-flex justify-left align-stretch">
-      <v-col cols="12" md="4">
-        <v-sheet class="pa-3 rounded-l" style="height: 100%">
+      <v-col cols="12" md="4" class="grey lighten-3">
+        <v-sheet class="rounded-l" style="height: 100%">
           <v-row>
             <v-col cols="12">
               <p style="text-align: center" class="text-h5 font-weight-bold">
@@ -26,18 +26,18 @@
           </v-row>
         </v-sheet>
       </v-col>
-      <v-col cols="12" md="8">
+      <v-col cols="12" md="8" class="grey lighten-3">
         <v-row
-          class="d-flex justify-left flex-nowrap overflow-auto align-center"
+          class="d-flex justify-left flex-nowrap overflow-auto align-center white pb-7 mb-3 ml-0 mr-0"
         >
           <v-col
-            cols="12"
-            xs="12"
-            sm="12"
-            md="12"
-            lg="12"
+            cols="8"
+            xs="8"
+            sm="8"
+            md="8"
+            lg="8"
             xl="6"
-            class="pa-md-5 gonuxt-tile"
+            class=""
             v-for="member in members1"
             :key="member.txtBody"
           >
@@ -58,8 +58,8 @@
     </v-row>
 
     <v-row class="d-flex justify-left align-stretch">
-      <v-col cols="12" md="4">
-        <v-sheet class="pa-3 rounded-l" style="height: 100%">
+      <v-col cols="12" md="4" class="grey lighten-3">
+        <v-sheet class="rounded-l" style="height: 100%">
           <v-row>
             <v-col cols="12">
               <p style="text-align: center" class="text-h5 font-weight-bold">
@@ -84,18 +84,18 @@
           </v-row>
         </v-sheet>
       </v-col>
-      <v-col cols="12" md="8">
+      <v-col cols="12" md="8" class="grey lighten-3">
         <v-row
-          class="d-flex justify-left flex-nowrap overflow-auto align-center"
+          class="d-flex justify-left flex-nowrap overflow-auto align-center mb-3 ml-0 mr-0 white"
         >
           <v-col
-            cols="12"
-            xs="12"
-            sm="12"
-            md="12"
-            lg="12"
+            cols="8"
+            xs="8"
+            sm="8"
+            md="8"
+            lg="8"
             xl="6"
-            class="pa-md-5 gonuxt-tile"
+            class=""
             v-for="member in members2"
             :key="member.txtBody"
           >
@@ -116,8 +116,8 @@
     </v-row>
 
     <v-row class="d-flex justify-left align-stretch">
-      <v-col cols="12" md="4">
-        <v-sheet class="pa-3 rounded-l" style="height: 100%">
+      <v-col cols="12" md="4" class="grey lighten-3">
+        <v-sheet class="rounded-l" style="height: 100%">
           <v-row>
             <v-col cols="12">
               <p style="text-align: center" class="text-h5 font-weight-bold">
@@ -135,18 +135,18 @@
           </v-row>
         </v-sheet>
       </v-col>
-      <v-col cols="12" md="8">
+      <v-col cols="12" md="8" class="grey lighten-3">
         <v-row
-          class="d-flex justify-left flex-nowrap overflow-auto align-center"
+          class="d-flex justify-left flex-nowrap overflow-auto align-center mb-3 ml-0 mr-0 white"
         >
           <v-col
-            cols="12"
-            xs="12"
-            sm="12"
-            md="12"
-            lg="12"
+            cols="8"
+            xs="8"
+            sm="8"
+            md="8"
+            lg="8"
             xl="6"
-            class="pa-md-5 gonuxt-tile"
+            class=""
             v-for="member in members3"
             :key="member.txtBody"
           >
