--- a/sections/oupc/TopSection/template.html
+++ b/sections/oupc/TopSection/template.html
@@ -1,4 +1,4 @@
-<section class="gnt-sec-2 mt-0 grey lighten-3">
+<section class="mt-0 pb-4 grey lighten-3">
   <v-container fluid class="d-none d-md-block key-visual-container-pc">
     <v-row class="d-flex align-stretch">
       <v-spacer></v-spacer>
