--- a/sections/oupc/AccessSection/template.html
+++ b/sections/oupc/AccessSection/template.html
@@ -1,4 +1,4 @@
-<section class="gnt-sec-2 grey lighten-3 mb-n15">
+<section class="pb-4 grey lighten-3 mb-n15">
   <v-container>
     <h3 class="font-weight-bold pb-8 primary--text text-center text-h3">
       アクセス
@@ -24,7 +24,7 @@
         class="text-center align-center font-weight-bold text-h5"
       >
         <p>
-          活動場所…豊中キャンパス（新体育館下・明道館）
+          活動場所…豊中キャンパス<br class="br-disp" />（新体育館下・明道館）
           <br />
           連絡先…oucp1962@gmail.com
           <br />
