--- a/sections/oupc/MessageSection/template.html
+++ b/sections/oupc/MessageSection/template.html
@@ -1,4 +1,4 @@
-<section class="gnt-sec-2 py-6">
+<section class="pb-4 grey lighten-4">
   <v-container>
     <div class="mb-8">
       <h3 class="font-weight-bold mb-3 pb-4 primary--text text-center text-h3">
@@ -19,7 +19,7 @@
               >
                 <v-row justify="space-between" dense>
                   <v-col cols="4">
-                    <div class="ma-3 pl-1">
+                    <div class="ma-3">
                       <v-img
                         :src="item.src"
                         aspect-ratio="1"
