change message text color and layout

--- a/sections/oupc/MemberSection/template.html
+++ b/sections/oupc/MemberSection/template.html
@@ -28,7 +28,7 @@
       </v-col>
       <v-col cols="12" md="8" class="grey lighten-3">
         <v-row
-          class="d-flex justify-left flex-nowrap overflow-auto align-center white pb-7 mb-3 ml-0 mr-0"
+          class="d-flex justify-left flex-nowrap overflow-auto align-center white mb-3 ml-0 mr-0"
         >
           <v-col
             cols="8"
