--- a/sections/oupc/EventSection/template.html
+++ b/sections/oupc/EventSection/template.html
@@ -1,6 +1,6 @@
 <section class="pb-4 grey lighten-4">
   <v-container>
-    <h3 class="font-weight-bold pb-4 primary--text text-center text-h3">
+    <h3 class="font-weight-bold pt-15 pb-10 primary--text text-center text-h3">
       新歓イベント
     </h3>
 
