--- a/sections/oupc/LastMessageSection/template.html
+++ b/sections/oupc/LastMessageSection/template.html
@@ -1,4 +1,4 @@
-<section class="pb-4 grey lighten-4">
+<section class="pt-10 pb-15 grey lighten-4">
   <v-container>
     <div class="complement lighten-1 border-1">
       <v-row class="d-flex justify-center">
