--- a/sections/oupc/MessageSection/template.html
+++ b/sections/oupc/MessageSection/template.html
@@ -1,9 +1,14 @@
-<section class="pb-4 grey lighten-4">
+<section class="pt-10 pb-15 grey lighten-4">
   <v-container>
     <div class="mb-8">
-      <h3 class="font-weight-bold mb-3 pb-4 primary--text text-center text-h3">
+      <h3 class="font-weight-bold mb-10 primary--text text-center text-h3">
         新入生へ<br class="br-disp" />メッセージ
       </h3>
+      <h4 class="font-weight-bold mb-15 black--text text-center text-h5">
+        カードをクリック<br class="br-disp" />して先輩からの<br
+          class="br-disp"
+        />メッセージを読もう！
+      </h4>
     </div>
     <v-row>
       <v-col v-for="(item, i) in items" :key="i" cols="12" sm="12" md="6">
