--- a/sections/oupc/ScheduleSection/template.html
+++ b/sections/oupc/ScheduleSection/template.html
@@ -1,4 +1,4 @@
-<section class="grey lighten-4">
+<section class="pt-15 pb-5 grey lighten-4">
   <v-container >
     <h3 class="font-weight-bold d-block pb-4 primary--text  text-center text-h3">年間<br class="br-disp" />スケジュール</h3>
   
