--- a/sections/oupc/MemberSection/template.html
+++ b/sections/oupc/MemberSection/template.html
@@ -1,4 +1,4 @@
-<section class="pb-4 grey lighten-3">
+<section class="pt-15 pb-10 grey lighten-3">
   <v-container>
     <h3 class="font-weight-bold pb-4 d-block primary--text text-center text-h3">
       団員紹介
