--- a/sections/oupc/QASection/template.html
+++ b/sections/oupc/QASection/template.html
@@ -1,4 +1,4 @@
-<section class="pb-4 grey lighten-3">
+<section class="pt-10 pb-15 grey lighten-3">
   <v-container class="">
     <h3 class="font-weight-bold d-block pb-4 primary--text text-center text-h3">
       Q&A
