--- a/sections/oupc/MemberSection/template.html
+++ b/sections/oupc/MemberSection/template.html
@@ -14,11 +14,16 @@
               </p>
             </v-col>
           </v-row>
-          <v-row class="d-flex align-stretch">
+          <v-row class="d-flex align-center">
             <v-col cols="12" lg="12" xl="12">
-              <v-img class="img-box" aspect-ratio="1.5" :src="imgSrc1" />
+              <v-img class="img-box" aspect-ratio="1" :src="imgSrc1" />
             </v-col>
-            <v-col cols="12" class="pl-10 pr-10 font-weight-bold text-center">
+            <v-col
+              cols="12"
+              lg="12"
+              xl="12"
+              class="pl-10 pr-10 font-weight-bold text-center"
+            >
               <p>
                 拍手・声援を届けるバック、鼓手、旗手、そして独特な振りで応援を指揮するチーフに分かれ、応援を文字通りリードする部です。
               </p>
@@ -27,33 +32,35 @@
         </v-sheet>
       </v-col>
       <v-col cols="12" md="8" class="grey lighten-3">
-        <v-row
-          class="d-flex justify-left flex-nowrap overflow-auto align-center white mb-3 ml-0 mr-0"
-        >
-          <v-col
-            cols="8"
-            xs="8"
-            sm="8"
-            md="8"
-            lg="8"
-            xl="6"
-            class=""
-            v-for="member in members1"
-            :key="member.txtBody"
+        <v-sheet class="rounded-l" style="height: 100%">
+          <v-row
+            class="d-flex justify-left flex-nowrap overflow-auto align-center mb-3 ml-0 mr-0 white"
           >
-            <MemberCard
-              :imgSrc="member.imgSrc"
-              :txtBody="member.txtBody"
-              :name="member.name"
-              :job="member.job"
-              :position="member.position"
-              :school="member.school"
-              :course="member.course"
-              :bgcolor="member.bgcolor"
-              imgSize="12rem"
-            />
-          </v-col>
-        </v-row>
+            <v-col
+              cols="8"
+              xs="8"
+              sm="8"
+              md="8"
+              lg="8"
+              xl="6"
+              class=""
+              v-for="member in members1"
+              :key="member.txtBody"
+            >
+              <MemberCard
+                :imgSrc="member.imgSrc"
+                :txtBody="member.txtBody"
+                :name="member.name"
+                :job="member.job"
+                :position="member.position"
+                :school="member.school"
+                :course="member.course"
+                :bgcolor="member.bgcolor"
+                imgSize="12rem"
+              />
+            </v-col>
+          </v-row>
+        </v-sheet>
       </v-col>
     </v-row>
 
@@ -85,33 +92,35 @@
         </v-sheet>
       </v-col>
       <v-col cols="12" md="8" class="grey lighten-3">
-        <v-row
-          class="d-flex justify-left flex-nowrap overflow-auto align-center mb-3 ml-0 mr-0 white"
-        >
-          <v-col
-            cols="8"
-            xs="8"
-            sm="8"
-            md="8"
-            lg="8"
-            xl="6"
-            class=""
-            v-for="member in members2"
-            :key="member.txtBody"
+        <v-sheet class="rounded-l" style="height: 100%">
+          <v-row
+            class="d-flex justify-left flex-nowrap overflow-auto align-center mb-3 ml-0 mr-0 white"
           >
-            <MemberCard
-              :imgSrc="member.imgSrc"
-              :txtBody="member.txtBody"
-              :name="member.name"
-              :job="member.job"
-              :position="member.position"
-              :school="member.school"
-              :course="member.course"
-              :bgcolor="member.bgcolor"
-              imgSize="12rem"
-            />
-          </v-col>
-        </v-row>
+            <v-col
+              cols="8"
+              xs="8"
+              sm="8"
+              md="8"
+              lg="8"
+              xl="6"
+              class=""
+              v-for="member in members2"
+              :key="member.txtBody"
+            >
+              <MemberCard
+                :imgSrc="member.imgSrc"
+                :txtBody="member.txtBody"
+                :name="member.name"
+                :job="member.job"
+                :position="member.position"
+                :school="member.school"
+                :course="member.course"
+                :bgcolor="member.bgcolor"
+                imgSize="12rem"
+              />
+            </v-col>
+          </v-row>
+        </v-sheet>
       </v-col>
     </v-row>
 
@@ -136,35 +145,37 @@
         </v-sheet>
       </v-col>
       <v-col cols="12" md="8" class="grey lighten-3">
-        <v-row
-          class="d-flex justify-left flex-nowrap overflow-auto align-center mb-3 ml-0 mr-0 white"
-        >
-          <v-col
-            cols="8"
-            xs="8"
-            sm="8"
-            md="8"
-            lg="8"
-            xl="6"
-            class=""
-            v-for="member in members3"
-            :key="member.txtBody"
+        <v-sheet class="rounded-l" style="height: 100%">
+          <v-row
+            class="d-flex justify-left flex-nowrap overflow-auto align-center mb-3 ml-0 mr-0 white"
           >
-            <MemberCard
-              :imgSrc="member.imgSrc"
-              :txtBody="member.txtBody"
-              :name="member.name"
-              :job="member.job"
-              :position="member.position"
-              :school="member.school"
-              :course="member.course"
-              :instrument="member.instrument"
-              :subinstrument="member.subinstrument"
-              :bgcolor="member.bgcolor"
-              imgSize="12rem"
-            />
-          </v-col>
-        </v-row>
+            <v-col
+              cols="8"
+              xs="8"
+              sm="8"
+              md="8"
+              lg="8"
+              xl="6"
+              class=""
+              v-for="member in members3"
+              :key="member.txtBody"
+            >
+              <MemberCard
+                :imgSrc="member.imgSrc"
+                :txtBody="member.txtBody"
+                :name="member.name"
+                :job="member.job"
+                :position="member.position"
+                :school="member.school"
+                :course="member.course"
+                :instrument="member.instrument"
+                :subinstrument="member.subinstrument"
+                :bgcolor="member.bgcolor"
+                imgSize="12rem"
+              />
+            </v-col>
+          </v-row>
+        </v-sheet>
       </v-col>
     </v-row>
   </v-container>
