change font size

--- a/sections/oupc/MessageSection/template.html
+++ b/sections/oupc/MessageSection/template.html
@@ -46,7 +46,7 @@
 
                     <v-card-subtitle
                       v-text="item.name"
-                      class="mt-auto font-weight-bold txt2 font-txt"
+                      class="card-subtitle mt-auto font-weight-bold txt2 font-txt"
                     ></v-card-subtitle>
                   </v-col>
                 </v-row>
